--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,7 +22,9 @@
     "react-event-utils": "^1.0.1",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "react-switch": "^7.0.0",
     "react-toastify": "^9.1.1",
+    "react-toggle": "^4.1.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
