fixed bug in calendar past / present differentiation, bug in sending messages

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,9 +18,11 @@
     "event-utils": "^2.1.0",
     "fullcalendar": "^6.0.3",
     "jwt-decode": "^3.1.2",
+    "moment": "^2.29.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-event-utils": "^1.0.1",
+    "react-moment": "^1.1.3",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "react-switch": "^7.0.0",
