--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,7 @@
     "react-moment": "^1.1.3",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "react-select-us-states": "^0.1.2",
     "react-switch": "^7.0.0",
     "react-toastify": "^9.1.1",
     "react-toggle": "^4.1.3",
