--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
     "react-dom": "^17.0.2",
     "react-event-utils": "^1.0.1",
     "react-moment": "^1.1.3",
+    "react-pro-sidebar": "^1.0.0",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "react-select-us-states": "^0.1.2",
