--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-event-utils": "^1.0.1",
+    "react-hook-form": "^7.46.2",
     "react-moment": "^1.1.3",
     "react-pro-sidebar": "^1.0.0",
     "react-router-dom": "^6.2.1",
